--- a/springbootviacodespace/src/main/resources/static/styles.css
+++ b/springbootviacodespace/src/main/resources/static/styles.css
@@ -1,65 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+
 body {
-    background-color: #f4f6f9;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #495057;
-    transition: background-color 0.3s;
+    background-color: #121212;
+    color: #e0e0e0;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 h1 {
-    color: #007bff;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700; /* Fonte mais pesada para destaque */
+    color: #bb86fc; /* Cor do texto */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra do texto para mais destaque */
     margin-bottom: 20px;
+    transition: color 0.3s;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 4rem;
 }
 
 .card {
     border-radius: 10px;
+    background-color: #1e1e1e;
+    border: 1px solid #333;
     transition: box-shadow 0.3s, transform 0.3s;
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
     transform: translateY(-5px);
 }
 
 .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #bb86fc;
+    border-color: #bb86fc;
     transition: background-color 0.3s, border-color 0.3s;
 }
 
 .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #004085;
+    background-color: #9c27b0;
+    border-color: #9c27b0;
 }
 
 #user-name {
     border-radius: 4px;
-    border: 1px solid #ced4da;
+    border: 1px solid #333;
+    background-color: #1e1e1e;
+    color: #e0e0e0;
     transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 #user-name:focus {
-    border-color: #007bff;
-    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.25);
+    border-color: #bb86fc;
+    box-shadow: 0 0 0 0.2rem rgba(187, 134, 252, 0.25);
 }
 
 .list-group-item {
-    border: 1px solid #dee2e6;
+    border: 1px solid #333;
+    background-color: #1e1e1e;
     border-radius: 4px;
     margin-bottom: 5px;
+    color: #e0e0e0;
     transition: background-color 0.3s, transform 0.3s;
 }
 
 .list-group-item:hover {
-    background-color: #f1f1f1;
+    background-color: #333;
     transform: translateY(-2px);
 }
 
 .btn-danger {
     margin-left: 10px;
+    background-color: #c62828;
+    border-color: #c62828;
     transition: background-color 0.3s, border-color 0.3s;
 }
 
 .btn-danger:hover {
-    background-color: #c82333;
-    border-color: #bd2130;
+    background-color: #b71c1c;
+    border-color: #b71c1c;
+}
+
+.container {
+    padding: 2rem;
+}
+
+@media (min-width: 600px) {
+    .container {
+        padding: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        padding: 2rem;
+    }
 }
